--- a/recipes/apple-spanish-salad.html
+++ b/recipes/apple-spanish-salad.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Apple Spanish Salad</title>
   </head>
   <body>
     <h1>Apple spanish salad Recipe</h1>
