add style to index.html

--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin recipes</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <a href="./recipes/lime-chicken-soft-taco.html"> Lime chicken soft taco </a>
-    <br />
-    <a href="./recipes/apple-spanish-salad.html">Apple spanish salad </a>
-    <br />
-    <a href="./recipes/tiramisu.html">Tiramisu </a>
-    <br />
+    <div>
+      <h1 id="mainHeader">Odin Recipes</h1>
+      <a class="url" href="./recipes/lime-chicken-soft-taco.html">
+        Lime chicken soft taco
+      </a>
+      <br />
+      <a class="url" href="./recipes/apple-spanish-salad.html"
+        >Apple spanish salad
+      </a>
+      <br />
+      <a class="url" href="./recipes/tiramisu.html">Tiramisu </a>
+      <br />
+    </div>
   </body>
 </html>
