--- a/recipes/apple-spanish-salad.html
+++ b/recipes/apple-spanish-salad.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Apple Spanish Salad</title>
+    <link rel="stylesheet" href="./../style.css" />
   </head>
   <body>
     <h1>Apple spanish salad Recipe</h1>
-    <img src="./img/applespanishsalad.jpeg" alt="Apple spanish salad" />
+    <img src="./../img/applespanishsalad.jpeg" alt="Apple spanish salad" />
     <h3>Description</h3>
     <p>
       These salad mainly maid of bunch of vegs and apples. The addition of nuts
