--- a/recipes/lime-chicken-soft-taco.html
+++ b/recipes/lime-chicken-soft-taco.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lime Chicken Taco</title>
+    <link rel="stylesheet" href="./../style.css" />
   </head>
   <body>
     <h1>Lime chicken soft Taco Recipe</h1>
-    <img src="./img/applespanishsalad.jpeg" alt="Apple spanish salad" />
+    <img src="./../img/limechickensofttaco.jpeg" alt="Lime chicken soft taco" />
     <h3>Description</h3>
     <p>
       These chicken tacos seasoned with lime, oregano, and garlic are flavorful
