--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tiramisu</title>
+    <link rel="stylesheet" href="./../style.css" />
   </head>
   <body>
     <h1>Tiramisu Recipe</h1>
-    <img src="./img/applespanishsalad.jpeg" alt="Apple spanish salad" />
+    <img src="./../img/tiramisu.jpeg" alt="Tiramisu" />
     <h3>Description</h3>
     <p>
       Tiramisu is a classic Italian layered dessert with rum-flavored,
