add style to recipes pages

--- a/recipes/lime-chicken-soft-taco.html
+++ b/recipes/lime-chicken-soft-taco.html
@@ -7,55 +7,64 @@
     <link rel="stylesheet" href="./../style.css" />
   </head>
   <body>
-    <h1>Lime chicken soft Taco Recipe</h1>
-    <img src="./../img/limechickensofttaco.jpeg" alt="Lime chicken soft taco" />
-    <h3>Description</h3>
-    <p>
-      These chicken tacos seasoned with lime, oregano, and garlic are flavorful
-      and delicious.
-    </p>
-    <h3>Ingredients</h3>
-    <ul>
-      <li>1 ½ pounds skinless, boneless chicken breast meat - cubed</li>
+    <div>
+      <h1 class="header">Lime chicken soft Taco Recipe</h1>
+      <div class="pageContent">
+        <img
+          class="img"
+          src="./../img/limechickensofttaco.jpeg"
+          alt="Lime chicken soft taco"
+        />
+        <h3>Description</h3>
+        <p>
+          These chicken tacos seasoned with lime, oregano, and garlic are
+          flavorful and delicious.
+        </p>
+        <h3>Ingredients</h3>
+        <ul class="myUL">
+          <li>1 ½ pounds skinless, boneless chicken breast meat - cubed</li>
 
-      <li>2 green onions, chopped</li>
+          <li>2 green onions, chopped</li>
 
-      <li>⅛ cup red wine vinegar</li>
+          <li>⅛ cup red wine vinegar</li>
 
-      <li>½ lime, juiced</li>
+          <li>½ lime, juiced</li>
 
-      <li>2 cloves garlic, minced</li>
+          <li>2 cloves garlic, minced</li>
 
-      <li>1 teaspoon dried oregano</li>
+          <li>1 teaspoon dried oregano</li>
 
-      <li>1 teaspoon white sugar</li>
+          <li>1 teaspoon white sugar</li>
 
-      <li>½ teaspoon salt</li>
+          <li>½ teaspoon salt</li>
 
-      <li>½ teaspoon ground black pepper</li>
+          <li>½ teaspoon ground black pepper</li>
 
-      <li>10 (6 inch) flour tortillas</li>
+          <li>10 (6 inch) flour tortillas</li>
 
-      <li>1 tomato, diced</li>
+          <li>1 tomato, diced</li>
 
-      <li>¼ cup shredded lettuce</li>
+          <li>¼ cup shredded lettuce</li>
 
-      <li>¼ cup shredded Monterey Jack cheese</li>
-      <li>¼ cup salsa</li>
-    </ul>
-    <h3>Steps</h3>
-    <ol>
-      <li>
-        Sauté chicken in a medium saucepan over medium high heat until tender,
-        about 15 to 20 minutes. Add green onions, vinegar, lime juice, garlic,
-        oregano, sugar, salt, and pepper. Simmer over low heat for 10 minutes.
-      </li>
-      <li>
-        Heat an iron skillet over medium heat. Place a tortilla in the pan,
-        warm, and turn over to heat the other side. Repeat with remaining
-        tortillas. Serve lime chicken mixture in warm tortillas topped with
-        tomato, lettuce, cheese and salsa.
-      </li>
-    </ol>
+          <li>¼ cup shredded Monterey Jack cheese</li>
+          <li>¼ cup salsa</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol class="myOL">
+          <li>
+            Sauté chicken in a medium saucepan over medium high heat until
+            tender, about 15 to 20 minutes. Add green onions, vinegar, lime
+            juice, garlic, oregano, sugar, salt, and pepper. Simmer over low
+            heat for 10 minutes.
+          </li>
+          <li>
+            Heat an iron skillet over medium heat. Place a tortilla in the pan,
+            warm, and turn over to heat the other side. Repeat with remaining
+            tortillas. Serve lime chicken mixture in warm tortillas topped with
+            tomato, lettuce, cheese and salsa.
+          </li>
+        </ol>
+      </div>
+    </div>
   </body>
 </html>
