--- a/recipes/apple-spanish-salad.html
+++ b/recipes/apple-spanish-salad.html
@@ -7,34 +7,44 @@
     <link rel="stylesheet" href="./../style.css" />
   </head>
   <body>
-    <h1>Apple spanish salad Recipe</h1>
-    <img src="./../img/applespanishsalad.jpeg" alt="Apple spanish salad" />
-    <h3>Description</h3>
-    <p>
-      These salad mainly maid of bunch of vegs and apples. The addition of nuts
-      and fruit makes this salad extra special.
-    </p>
-    <h3>Ingredients</h3>
-    <ul>
-      <li>2 cups baby spinach leaves</li>
-      <li>1 medium apple, sliced</li>
-      <li>2 tablespoons chopped celery</li>
-      <li>2 tablespoons toasted PLANTERS Pecans, chopped</li>
-      <li>
-        2 tablespoons KRAFT LIGHT DONE RIGHT! House Italian Reduced Fat Dressing
-      </li>
-    </ul>
-    <h3>Steps</h3>
-    <ol>
-      <li>Toss ingredients with dressing in large bowl.</li>
-      <li>
-        Spread nuts in single layer in shallow baking pan. Bake at 350 degrees F
-        8 to 10 min. or until lightly toasted, stirring occasionally.
-      </li>
-      <li>
-        Toss together apples, celery and dressing. Cover. Refrigerate. Toss with
-        spinach and pecans just before serving.
-      </li>
-    </ol>
+    <div>
+      <h1 class="header">Apple spanish salad Recipe</h1>
+      <div class="pageContent">
+        <img
+          class="img"
+          src="./../img/applespanishsalad.jpeg"
+          alt="Apple spanish salad"
+        />
+        <h3>Description</h3>
+        <p>
+          These salad mainly maid of bunch of vegs and apples. The addition of
+          nuts and fruit makes this salad extra special.
+        </p>
+        <h3>Ingredients</h3>
+        <ul class="myUL">
+          <li>2 cups baby spinach leaves</li>
+          <li>1 medium apple, sliced</li>
+          <li>2 tablespoons chopped celery</li>
+          <li>2 tablespoons toasted PLANTERS Pecans, chopped</li>
+          <li>
+            2 tablespoons KRAFT LIGHT DONE RIGHT! House Italian Reduced Fat
+            Dressing
+          </li>
+        </ul>
+        <h3>Steps</h3>
+        <ol class="myOL">
+          <li>Toss ingredients with dressing in large bowl.</li>
+          <li>
+            Spread nuts in single layer in shallow baking pan. Bake at 350
+            degrees F 8 to 10 min. or until lightly toasted, stirring
+            occasionally.
+          </li>
+          <li>
+            Toss together apples, celery and dressing. Cover. Refrigerate. Toss
+            with spinach and pecans just before serving.
+          </li>
+        </ol>
+      </div>
+    </div>
   </body>
 </html>
